# workcpp

./: .gitignore
concurrency/: CMakeLists.txt
concurrency/basic-use/: CMakeLists.txt  basic_use.cpp
concurrency/condition-variable-example/: CMakeLists.txt  ConditionVariableExample.cpp  MyManagedObject.cpp  MyManagedObject.h
concurrency/create-thread/: CMakeLists.txt  create_thread.cpp
concurrency/create-thread-scope-variables/: CMakeLists.txt  CreateThreadScopeVars.cpp  MyManagedObject.cpp  MyManagedObject.h
concurrency/data-race/: CMakeLists.txt  DataRace.cpp  MyManagedObject.cpp  MyManagedObject.h
concurrency/detect-cpu-cores/: CMakeLists.txt  detect_cpu_cores.cpp
concurrency/mutex-example/: CMakeLists.txt  MutexExample.cpp  MyManagedObject.cpp  MyManagedObject.h
concurrency/mutex-use/: CMakeLists.txt  mutex_use.cpp
concurrency/thread-local-example/: CMakeLists.txt  MyManagedObject.cpp  MyManagedObject.h
dp-modern-cpp/: CMakeLists.txt
dp-modern-cpp/creational/: CMakeLists.txt
dp-modern-cpp/creational/pattern-builder/: CMakeLists.txt  CompositeBuilderMain.cpp  GroovyStyleBuilder.cpp  Person.cpp  Person.h  PersonAddressBuilder.h  PersonBuilder.cpp  PersonBuilder.h  PersonJobBuilder.h
modernescpp/: CMakeLists.txt
modernescpp/utilities/: CMakeLists.txt
modernescpp/utilities/minmax/: CMakeLists.txt  main.cpp
practical-cpp/: CMakeLists.txt
practical-cpp/phase1/: CMakeLists.txt  Exception.h  Observer.cpp  Observer.h  Publisher.cpp  Publisher.h  Singleton.cpp  Singleton.h  Stack.cpp  Stack.h  TestStack.cpp  TestStack.h  main.cpp
projectA/: CMakeLists.txt
projectA/phase1/: CMakeLists.txt  main.cpp
